<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/ThemeOverlay.Primary">

        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.ExtraLarge"
            android:layout_margin="16dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/title_welcome" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logoImg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/u_drive_logo"
            android:contentDescription="@string/cd_logo"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintTop_toBottomOf="@+id/titleTxt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/userTypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/logoImg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/instructorBtn"
            android:textAppearance="@style/TextAppearance.ExtraLarge"
            android:text="@string/what_are_you"/>

        <Button
            android:id="@+id/instructorBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/learnerBtn"
            android:text="@string/im_an_instructor"/>

        <Button
            android:id="@+id/learnerBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/im_a_learner"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>